mythtv (0.21.0+fixes16838-0ubuntu3) hardy; urgency=low

  * mythtv-common: add myth-reboot.sh, myth-halt.sh, myth-suspend.sh and
    myth-hibernate.sh into /usr/share/mythtv/. These scripts use HAL to shutdown/reboot/etc
  * Add 16_hal_shutdown.dpatch to adjust some defaults in mythtv to use the
    new scripts 

 -- Michael Haas <laga@laga.ath.cx>  Fri, 11 Apr 2008 20:54:14 +0200

mythtv (0.21.0+fixes16838-0ubuntu2) hardy; urgency=low

  * Update 11_add_myth_prime's internal primer
    for fixes on SA cable boxes.

 -- Mario Limonciello <superm1@ubuntu.com>  Thu, 10 Apr 2008 22:49:01 -0500

mythtv (0.21.0+fixes16838-0ubuntu1) hardy; urgency=low

  [ Michael Haas ]
  * Don't build depend against liba52.
  * New upstream checkout: switch to release-0-21-fixes branch
    - SECURITY FIX:
      + CVE 2007-6036
  * Remove the following patches as they're included now:
    - 12_changeset_16483.dpatch
    - 13_changeset_16577.dpatch
  * Add 14_fix_video_fallback.dpatch so we don't fall back to the opengl
    video renderer if xvmc-blit is not available (LP: #205158)
  * Add 15_hue_fix.dpatch (see <http://svn.mythtv.org/trac/ticket/5039>)

  [ Mario Limonciello ]
  * debian/control:
    - Add xterm to mythtv-backend depends (LP: #202708)

  [ majoridiot ]
  * Update debian/patches/11_add_mythprime:
    - Automatically detect both P2P and broadcast connections
      and prime them now without needing to specify node and device.

 -- Michael Haas <laga@laga.ath.cx>  Fri, 28 Mar 2008 23:47:20 +0100

mythtv (0.21.0-0ubuntu3) hardy; urgency=low

  [ Mario Limonciello ]
  * Add libchromexvmc1 and libchromexvmcpro1 to build depends to allow
    VIA XvMC support. (LP: #200633)
  * Build without faad runtime library loading.  (LP: #202590, #201572)
  * Add 12_firewire_tester.dpatch:
    - Creates directory structure for building with firewire tester.
  * Add 13_changeset_16577.dpatch:
    - Fixes UPnP breakage on PS3.
  * debian/rules: